# example-flask-app

./: Dockerfile  Dockerfile.template  Makefile  README.md  README.template.md  fingerprints.template.yaml  fingerprints.yaml  pyproject.template.toml  pyproject.toml  setup.cfg
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: uw-issue-template.template.md
.github/scripts/: README.md
.github/workflows/: deploy.template.yml  deploy.yml  finalize-template.yaml  pull-request.template.yml  pull-request.yml  release-on-push-to-main.template.yaml  release-on-push-to-main.yaml  scheduled-maintenance.template.yml  scheduled-maintenance.yml
example_app/: app.py  app.template.py
kubernetes-config/: README.md  README.template.md  automation.template.yaml  automation.yaml  example-flux-automation.yaml  example-helm-release.yaml  helm-release.template.yaml  helm-release.yaml
scripts/: build.sh  finalize-template.py  globals.template.sh
tests/: conftest.py  conftest.template.py  test_app.py
