[tool.poetry]
name = "flask-example"
version = "0.1.0"
description = ""
authors = ["Tom Thorogood <goodtom@uw.edu>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-flask = "^1.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
